k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodhouse
  labels:
    app.kubernetes.io/name: woodhouse
